force-app/main/default/objects/Tigerface2__Test_Table_Custom_Object__c/fields/Tigerface2__Test_Boolean__c.field-meta.xml
<CustomField>
    <fullName>Tigerface2__Test_Boolean__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to test a Boolean field.</description>
    <label>Test Boolean</label>
    <type>Checkbox</type>
</CustomField>