force-app/main/default/objects/Tigerface2__Test_Table_Custom_Object__c/fields/Tigerface2__Test_Formula_HTML__c.field-meta.xml
<CustomField>
    <fullName>Tigerface2__Test_Formula_HTML__c</fullName>
    <description>Used to test formula fields that should be rendered as HTML</description>
    <formula>HYPERLINK(&apos;https://tigerfacesystems.com&apos;, &apos;Tigerface Web Site&apos;, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Formula HTML</label>
    <type>Text</type>
</CustomField>