force-app/main/default/objects/Tigerface2__Test_Table_Custom_Object__c/fields/Tigerface2__Test_Number__c.field-meta.xml
<CustomField>
    <fullName>Tigerface2__Test_Number__c</fullName>
    <description>Used to test integer fields.</description>
    <label>Test Integer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>