force-app/main/default/objects/Tigerface2__Test_Table_Custom_Object__c/fields/Tigerface2__Test_Text__c.field-meta.xml
<CustomField>
    <fullName>Tigerface2__Test_Text__c</fullName>
    <description>Used to test text fields.</description>
    <label>Test Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>