force-app/main/default/objects/Tigerface2__Test_Table_Custom_Object__c/fields/Tigerface2__Test_Text_Area_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>Tigerface2__Test_Text_Area_Encrypted__c</fullName>
    <description>Used to test encrypted fields.</description>
    <label>Test Text Area Encrypted</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>