force-app/main/default/objects/Tigerface2__Test_Table_Custom_Object__c/fields/Tigerface2__Test_Time__c.field-meta.xml
<CustomField>
    <fullName>Tigerface2__Test_Time__c</fullName>
    <description>Used to test time fields.</description>
    <label>Test Time</label>
    <type>Time</type>
</CustomField>