force-app/main/default/objects/Tigerface2__Test_Table_Custom_Object__c/fields/Tigerface2__Test_URL__c.field-meta.xml
<CustomField>
    <fullName>Tigerface2__Test_URL__c</fullName>
    <description>Used to test URL fields.</description>
    <label>Test URL</label>
    <type>Url</type>
</CustomField>