force-app/main/default/objects/Tigerface2__Test_Table_Custom_Object__c/fields/Tigerface2__Text_Area_Long__c.field-meta.xml
<CustomField>
    <fullName>Tigerface2__Text_Area_Long__c</fullName>
    <description>Used to test text area long fields.</description>
    <label>Text Area Long</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>