force-app/main/default/objects/Tigerface2__Test_Table_Custom_Object__c/fields/Tigerface2__User__c.field-meta.xml
<CustomField>
    <fullName>Tigerface2__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to test reference fields.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Test_Table_Custom_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>